<resources>
    <string name="app_name">e_commerceapp</string>
    <string name="select_your_language">Select Your Language</string>
    <string name="done">Done</string>
    <string name="arabic">العربية</string>
    <string name="english">ENGLISH</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="sign_in_to_your_account_on_wastef">Sign In to your account on wastef</string>
    <string name="username_or_mobile">Username Or Mobile</string>
    <string name="password">Password</string>
    <string name="ok">Ok</string>
    <string name="a_short_title_is_best">A Short Title Is Best</string>
    <string name="a_message_should_be_a_short_complete_sentence">A message should be a short, complete sentence.</string>
    <string name="sign_in">SIGN IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">HOME</string>
    <string name="account">ACCOUNT</string>
    <string name="basket">BASKET</string>
    <string name="search_capital">SEARCH</string>
    <string name="main_group">Main Group</string>
    <string name="cars_group">Cars Group</string>
    <string name="brands">Brands</string>
    <string name="new_products">New Products</string>
    <string name="new_product">NEW</string>
    <string name="logo">logo</string>
    <string name="search">Search</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="back">Back</string>
    <string name="qr_scan">QrScan</string>
    <string name="no_items_found">No Items found</string>
    <string name="aren_t_any_item_found_on_our_stock">Aren\'t any item found on our stock</string>
    <string name="details">Details</string>
    <string name="main_groups">Main Groups</string>
    <string name="web_client_id">965762667327-3jgqrdvs17gj3k3d29kd1hhcdkco05us.apps.googleusercontent.com</string>
    <string name="web_client_id_2">1090110304549-ha3rkgieeei1duut540st9tgmim63vj8.apps.googleusercontent.com</string>
    <string name="android_client_id_new">1090110304549-c9e50c8fk9mf0n6m3sjhgqk7fml371fn.apps.googleusercontent.com</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up">Sign up</string>
    <string name="please_enter_your_mobile_number">please enter your mobile number:</string>
    <string name="api">API</string>
    <string name="get_another_joke">Get another joke</string>
    <string name="message">message</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="description">Description:</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="free">Free</string>
    <string name="cancel">Cancel</string>
    <string name="phone">Phone</string>
    <string name="phone_with_points">Phone:</string>
    <string name="address">Address</string>
    <string name="comments">Comments:</string>
    <string name="mobile">Mobile</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="already_have_account">Already have Account?</string>
    <string name="fill_the_fields_to_sign_up_on_wasef">Fill the fields to sign up on wasef</string>
</resources>