<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextStyle.SemiBold.Space24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/a_short_title_is_best"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/TextStyle.Space13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing16"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/spacing16"
            android:lineSpacingExtra="-10dp"
            android:paddingStart="@dimen/spacing16"
            android:paddingEnd="@dimen/spacing16"
            android:text="@string/a_message_should_be_a_short_complete_sentence"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1C000000"
            app:layout_constraintBottom_toTopOf="@id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button"
            style="@style/TextStyle.Space13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="#00000000"
            android:text="@string/ok"
            android:textColor="@color/color_primary"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
