<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.unit_one.e_commerceapp.ui.select_language.SelectLanguageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.select_language.SelectLanguageActivity">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="421dp"
            android:layout_height="136dp"
            android:layout_marginBottom="-15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/group_646" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13999999"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_your_language"
            style="@style/TextStyle.Space20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/tvEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/english"
            android:onClick="@{() -> viewModel.selectEnglish()}"
            android:textColor="@color/color_primary"
            style="@style/TextStyle.SemiBold.Space24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/checkmarkEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvEnglish"
            app:layout_constraintEnd_toStartOf="@+id/tvEnglish"
            app:layout_constraintTop_toTopOf="@+id/tvEnglish"
            app:srcCompat="@drawable/icon_ionic_ios_checkmark_circle" />

        <TextView
            android:id="@+id/tvArabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/arabic"
            style="@style/TextStyle.SemiBold.Space24"
            android:onClick="@{() -> viewModel.selectArabic()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEnglish" />

        <ImageView
            android:id="@+id/checkmarkArabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/tvArabic"
            app:layout_constraintStart_toStartOf="@+id/checkmarkEnglish"
            app:layout_constraintTop_toTopOf="@+id/tvArabic"
            app:srcCompat="@drawable/icon_ionic_ios_checkmark_circle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_done"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:hint="@string/done"
            android:onClick="@{() -> viewModel.onClickDone()}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/color_primary"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

        </com.google.android.material.button.MaterialButton>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>