<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.unit_one.e_commerceapp.ui.sign_up.SignUpViewModel" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.sign_up.SignUpFragment">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="131dp"
                android:layout_height="79dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView17"
                style="@style/TextStyle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/welcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView10" />

            <TextView
                android:id="@+id/textView18"
                style="@style/TextStyle.Space13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/fill_the_fields_to_sign_up_on_wasef"
                app:layout_constraintStart_toStartOf="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_Username"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing16"
                android:layout_marginTop="32dp"
                android:autofillHints="username"
                android:hint="@string/username"
                android:inputType="text"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:helperTextTextColor="@color/color_warning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18"
                app:startIconDrawable="@drawable/icon_user"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:background="@drawable/card_background"
                    android:maxLength="20"
                    android:text="@={viewModel.textUsername}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing16"
                android:layout_marginTop="16dp"
                android:autofillHints="username"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:helperTextTextColor="@color/color_warning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_Username"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/card_background"
                    android:maxLength="20"

                    android:text="@={viewModel.textEmail}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing16"
                android:layout_marginTop="16dp"
                android:autofillHints="username"
                android:hint="@string/address"
                android:inputType="text"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:helperTextTextColor="@color/color_warning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email"
                app:startIconDrawable="@drawable/icon_home"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:background="@drawable/card_background"
                    android:maxLength="20"

                    android:text="@={viewModel.textAddress}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing16"
                android:layout_marginTop="16dp"
                android:autofillHints="username"
                android:hint="@string/phone"
                android:inputType="number"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:helperTextTextColor="@color/color_warning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_address"
                app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:background="@drawable/card_background"
                    android:maxLength="20"

                    android:text="@={viewModel.textPhone}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing16"
                android:layout_marginTop="16dp"
                android:autofillHints="password"
                android:hint="@string/password"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:helperTextTextColor="@color/color_warning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_phone"
                app:startIconDrawable="@drawable/icon_lock"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_background"
                    android:inputType="textPassword"
                    android:text="@={viewModel.textPassword}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_repeat_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing16"
                android:layout_marginTop="16dp"
                android:autofillHints="password"
                android:hint="Repeat Passowrd"
                android:inputType="textPassword"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:helperTextTextColor="@color/color_warning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password"
                app:startIconDrawable="@drawable/icon_lock"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_background"
                    android:inputType="textPassword"
                    android:text="@={viewModel.textRepeatPassword}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/sign_up"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:backgroundTint="@color/color_primary"
                app:cornerRadius="10dp"
                android:onClick="@{() -> viewModel.onClickButtonSignUp()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_repeat_password" />

            <Button
                android:id="@+id/buttonAlreadyHaveAccount"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:onClick="@{viewModel.navigateToSignIn}"
                android:text="@string/already_have_account"
                android:textColor="@color/color_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />

            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:showWhenLoading="@{viewModel.signUpState}" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>