<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.unit_one.e_commerceapp.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="74dp"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_search"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing16"
            android:layout_marginTop="16dp"
            android:autofillHints="username"
            android:hint="@string/search_capital"
            android:inputType="textWebEmailAddress"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:helperTextTextColor="@color/color_warning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:startIconDrawable="@drawable/icon_search"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_email"
            app:endIconTint="@android:color/transparent"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_background"

                android:maxLength="20" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="1dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/buttonQrScan"
            app:layout_constraintEnd_toStartOf="@+id/buttonQrScan"
            app:layout_constraintTop_toTopOf="@id/buttonQrScan" />

        <ImageButton
            android:id="@+id/buttonQrScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00000000"
            android:contentDescription="@string/qr_scan"
            android:src="@drawable/icon_qr_code"
            app:layout_constraintBottom_toBottomOf="@+id/text_input_layout_search"
            app:layout_constraintEnd_toEndOf="@+id/text_input_layout_search"
            app:layout_constraintTop_toTopOf="@+id/text_input_layout_search" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMain"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_search"
            app:showWhenSuccess="@{viewModel.products}" />

        <include
            android:id="@+id/loading_and_error"
            layout="@layout/loading_and_error"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            bind:state="@{viewModel.products}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_search" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
